Attempt to solve issue of habitats/land use not visible

--- a/src/components/ExploreContainer.css
+++ b/src/components/ExploreContainer.css
@@ -88,7 +88,7 @@
   color:black;
 }
 .select{
-  width: 90%;
+  max-width: 100% !important;
 }
 a{
   text-decoration: none;
